--- a/odoo/custom/src/unla-desarrollos/real_estate/views/estate_property_type_views.xml
+++ b/odoo/custom/src/unla-desarrollos/real_estate/views/estate_property_type_views.xml
@@ -1,28 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-  <!-- Vista de lista -->
+  <!-- Vista de lista editable -->
   <record id="view_estate_property_type_list" model="ir.ui.view">
     <field name="name">estate.property.type.list</field>
     <field name="model">estate.property.type</field>
     <field name="arch" type="xml">
-      <list string="Tipos de propiedad">
+      <list string="Tipos de propiedad" editable="top">
         <field name="name"/>
       </list>
-    </field>
-  </record>
-
-  <!-- Vista de formulario -->
-  <record id="view_estate_property_type_form" model="ir.ui.view">
-    <field name="name">estate.property.type.form</field>
-    <field name="model">estate.property.type</field>
-    <field name="arch" type="xml">
-      <form string="Tipo de propiedad">
-        <sheet>
-          <group>
-            <field name="name" placeholder="Nombre del tipo"/>
-          </group>
-        </sheet>
-      </form>
     </field>
   </record>
 
@@ -30,6 +15,6 @@
   <record id="action_estate_property_type" model="ir.actions.act_window">
     <field name="name">Tipos de propiedad</field>
     <field name="res_model">estate.property.type</field>
-    <field name="view_mode">list,form</field>
+    <field name="view_mode">list</field>
   </record>
 </odoo>
